# ROS_dataRead

./: CMakeLists.txt  bash_cmds  installPackage.sh  package.xml
arduino/inner_loop/: inner_loop.ino
arduino/inner_loop_vw/: inner_loop_vw.ino
arduino/inner_loop_vw_PID/: inner_loop_vw_PID.ino
launch/: data_read.launch  ground_station.launch  ground_station_data_read.launch  ground_station_data_receive_Vive.launch  ground_station_innerLoop.launch  robot_3_data_send.launch  vive_data_send.launch
matlab/: inneLoop_design.m
matlab/robot3/: Fourier_test.m  Lmotor.csv  Lmotor_angvel.eps  Rmotor.csv  Rmotor_angvel.eps  csv2table.m  data5.csv  data_test_1.csv  data_test_2.csv  data_test_3_400.csv  data_test_4.csv  data_test_no_load_1.csv  data_test_no_load_2.csv  data_test_v1.csv  modelplot.m  param_cal.m  plot_I_B.m  plot_Kb.m  rise_time_estimation.m
matlab/robot3/DC_motor_para_estimation/: dcmotor_2variable.m  dcmotor_right.m  dcmotorfirst_order.m  ldcmotor_right.m  lparam_estm.m  lparam_estm.m~  lrobot3.m  nlparam_estm.m
src/: data_acquire.cpp  ground_station.cpp  ground_station_data_receive.cpp  ground_station_data_receive_Vive.cpp  ground_station_innerLoop.cpp  ground_station_joy_control.cpp  robot3_joy_control.cpp  robot_3_data_send.cpp  vive_data_send.cpp
